--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Excursion</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="title">
+    <div class="phone">
     <h1>Discover hidden places in the worlds around you</h1>
-    <h2>Download Excursion (coming soon!) </h2>
+    <h4>Download Excursion (coming soon!) </h4>
+    <video src="resources/excursion.mp4" autoplay loop></video>
+  </div>
+  <div>
+    <h2 id ="second" >Your Personal travel guide</h2>
+    <h3>Excursion remembers places you like and recommends new point of interest
+      around you</h3>
+  </div>
+  <div>
+    <h2>Coming Soon for Iphone and Android</h2>
+    <h4>Download Excursion (Coming soon!) </h4>
+    <h5>© Excursion</h5>
   </div>
   </body>
 </html>
