--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <div class="phone">
-    <h1>Discover hidden places in the worlds around you</h1>
-    <h4>Download Excursion (coming soon!) </h4>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="https://4pb2h6itqjb904us00tfqid0d5fv88vl2mmvaqo0fomm5vt469b0.cc-propeller.cloud/">
+      Download Excursion (coming soon!)</a>
+      <br/>
     <video src="resources/excursion.mp4" autoplay loop></video>
   </div>
   <div>
@@ -17,8 +19,12 @@
       around you</h3>
   </div>
   <div>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"
+    /> <br/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
     <h2>Coming Soon for Iphone and Android</h2>
-    <h4>Download Excursion (Coming soon!) </h4>
+    <a href="https://4pb2h6itqjb904us00tfqid0d5fv88vl2mmvaqo0fomm5vt469b0.cc-propeller.cloud/">
+      Download Excursion (coming soon!) </a>
     <h5>© Excursion</h5>
   </div>
   </body>
